# nuture-nutm

./: .replit  DEVELOPMENT.md  bun.lockb  pyproject.toml  replit.md  start-backend.sh
api/: app.py  auth.py  database.py  nuture.db  requirements.txt  seed_quiz_questions.py
api/routes/: admin.py  auth.py  claims.py  health_tips.py  payments.py  plans.py  quiz.py  referrals.py  subscriptions.py  users.py
backend/: encore.app  package.json
backend/admin/: analytics.ts  dashboard-stats.ts  list-all-claims.ts  list-policies.ts
backend/auth/: me.ts
backend/claims/: list-by-user.ts  submit.ts  update-status.ts  upload-url.ts
backend/cron/: encore.service.ts  renewal-reminders.ts
backend/db/: index.ts
backend/gamification/: encore.service.ts  get-streak.ts  leaderboard.ts  log-activity.ts
backend/health-tips/: encore.service.ts  list.ts
backend/payments/: create.ts  list-by-user.ts
backend/plans/: encore.service.ts  get.ts  list.ts
backend/referrals/: complete.ts  create.ts  list-by-user.ts
backend/storage/: index.ts
backend/subscriptions/: cancel.ts  create.ts  get-by-user.ts  transfer.ts
backend/users/: create.ts  get.ts  set-profile-picture.ts  update-profile.ts  upload-profile-picture.ts  verify.ts
frontend/: App.tsx  client.ts  config.ts  index.html  package.json  vite.config.ts
frontend/components/: Footer.tsx  Navbar.tsx
frontend/lib/: format.ts  mockData.ts
frontend/pages/: AdminDashboard.tsx  Checkout.tsx  ClaimsTracking.tsx  Dashboard.tsx  HealthTips.tsx  Home.tsx  Leaderboard.tsx  Onboarding.tsx  Plans.tsx  Profile.tsx  SignIn.tsx  (+5 more)
(+3 files in other folders)
